<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/idTvAboutSb"
        android:text="@string/strTvAboutSb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!--android:min="0" API 19 não tem mínimo -->

    <SeekBar
        android:layout_below="@id/idTvAboutSb"
        android:max="100"
        android:progress="50"
        android:id="@+id/idSbProbabilityOfPosMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_below="@id/idSbProbabilityOfPosMsg"
        android:id="@+id/idBtnGetMsg"
        android:text="@string/strBtnGetMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_below="@id/idBtnGetMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_below="@id/idBtnGetMsg"
            android:id="@+id/idTvMsgs"
            android:text="@string/strTvMsgs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</RelativeLayout>